; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_test-journal-interleaving.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_test-journal-interleaving.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"/etc/machine-id\00", align 1
@F_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"/etc/machine-id not found\00", align 1
@arg_keep = common dso_local global i32 0, align 4
@setup_sequential = common dso_local global i32 0, align 4
@setup_interleaved = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @LOG_DEBUG, align 4
  %7 = call i32 @test_setup_logging(i32 %6)
  %8 = load i32, i32* @F_OK, align 4
  %9 = call i64 @access(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 @log_tests_skipped(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i32 %12, i32* %3, align 4
  br label %22

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = icmp sgt i32 %14, 1
  %16 = zext i1 %15 to i32
  store i32 %16, i32* @arg_keep, align 4
  %17 = load i32, i32* @setup_sequential, align 4
  %18 = call i32 @test_skip(i32 %17)
  %19 = load i32, i32* @setup_interleaved, align 4
  %20 = call i32 @test_skip(i32 %19)
  %21 = call i32 (...) @test_sequence_numbers()
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %13, %11
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i64 @access(i8*, i32) #1

declare dso_local i32 @log_tests_skipped(i8*) #1

declare dso_local i32 @test_skip(i32) #1

declare dso_local i32 @test_sequence_numbers(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
